Update to 1.18, add fluid support and many features